--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -80,6 +80,7 @@ du titre de la publication et on présente une courte description de ces entité
 Puis, on fais l'analyse des sentiments des commentaires pour présenter l'opinion des utilisateurs sur les sujets présentés dans la publication.
 
 \section{Exécution du projet}
+\subsection{Code source}
 Le code source est disponible au \url{https://github.com/gariepyalex/reddit-nlp}. Voici les étapes à suivre pour l'exécution du projet:
 \begin{enumerate}
 \item Créer un dossier \verb;lib/; à la racine du projet et y télécharger le fichier \url{http://nlp.stanford.edu/software/stanford-corenlp-models-current.jar}. Ce fichier n'est pas inclus dans le dépôt à cause de sa taille.
@@ -87,8 +88,9 @@ Le code source est disponible au \url{https://github.com/gariepyalex/reddit-nlp}
 \item Aller au \verb;localhost:8000; dans son navigateur web.
 \end{enumerate}
 
-Une alternative est de télécharger une version précompilée du projet, disponible au .. . Il s'agit d'un fichier \verb;.jar;. Pour exécuter le programme, il
-suffit d'entrer la commande \verb;java -jar nom_du_fichier.jar;.
+\subsection{Binaire source}
+Une alternative est de télécharger une version précompilée du projet, disponible dans le dépôt\footnote{\url{https://github.com/gariepyalex/reddit-nlp/releases/download/0.1.0-SNAPSHOT/reddit-nlp-0.1.0-SNAPSHOT-standalone.jar}}. Il s'agit d'un fichier \verb;.jar;. Pour exécuter le programme, il
+suffit d'entrer la commande \textbf{java -jar nom\_du\_fichier.jar}.
 
 \section{Expérimentation}
 
